  * any/local-o_cloexec.diff: don't assume O_CLOEXEC is always defined.

  [ Pierre Habouzit ]
  * Remove any/local-iconv-fix-trampoline.diff (obsolete).
  * Remove any/submitted-strfry.diff (merged).
  * Update any/submitted-rfc3484-sortv4.diff.
  * Update localedata/*first_weekday.diff.
  * Remove localedata/fix-am_ET.diff (obsolete).
  * Add locale/preprocessor-collate-uli-sucks.diff to fix endless loop when
    ifdef is used.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 29 Oct 2007 10:54:31 +0100

glibc (2.6.1-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update Spanish debconf translation, by Carlos Valdivia Yagüe.

  [ Clint Adams ]
  * debian/po/de.po: update from Helge Kreutzmann. closes: #442888.
  * debian/po/cs.po: update from Miroslav Kure. closes: #442904.
  * debian/po/it.po: update from Luca Monducci. closes: #443497.
  * debian/po/ja.po: update from Kenshi Muto. closes: #446577.
  * Add any/cvs-posix-glob.diff, fixing improper of treatment of \
    in glob(). closes: #445210

 -- Clint Adams <schizo@debian.org>  Sun, 14 Oct 2007 10:02:35 -0400

glibc (2.6.1-5) unstable; urgency=low

  [ Pierre Habouzit ]
  * remove any/local-sysmacros.diff: sorry for bug #439859 but it makes gimp
    (and presumably other software) FTBFS, it's too dispruptive.
    Closes: #442427.

  [ Clint Adams ]
  * amd64/local-x86_64_bits_sigcontext.diff: use a copy of the generic header
    for x86_64.  closes: #442418.

 -- Clint Adams <schizo@debian.org>  Sun, 16 Sep 2007 14:42:17 -0400

glibc (2.6.1-4) unstable; urgency=low

  * Disable any/local-ipv6-lookup.diff as it is causing breakages.
    Closes: bug#441857.
  * any/local-sysmacros.diff: use __inline instead of inline for
    compatibility with ANSI.  Closes: #441959.
  * patches/localedata/tailor-iso14651_t1.diff: correctly fix fi_FI
    locale.  Closes: bug#441026.
  * debian/rules.d/debhelper.mk: fix regex.  Closes: #441824.
  * Update French debconf translation, by Christian Perrier.  Closes:
    #442101.