@@ -1,7 +1,7 @@
 locale/check-unknown-symbols.diff
 locale/fix-LC_COLLATE-rules.diff -p0
-# locale/preprocessor-collate.diff -p0            # should not be needed anymore, but keep it anyways.
 locale/preprocessor-collate-uli-sucks.diff -p0
+locale/preprocessor-collate.diff -p0 # should not be needed anymore, but keep it anyways.
 locale/locale-print-LANGUAGE.diff -p0
 locale/LC_IDENTIFICATION-optional-fields.diff -p0
 locale/fix-C-first_weekday.diff -p0
